# Clair-Obscur-Save-Loader

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  ESL.py  Justfile  README.md  functionForSave.py  pyproject.toml  tox.ini
.github/: settings.yml
.github/workflows/: checks.yaml  release.yaml
clair_obscur_save_loader/: __init__.py  app.py  config.py  definitions.py
clair_obscur_save_loader/controllers/: __init__.py  main.py  profile.py  settings.py
clair_obscur_save_loader/managers/: __init__.py  main.py  profile.py  save.py
clair_obscur_save_loader/views/: __init__.py  label.py  main.py  popup.py  profile.py  save.py  settings.py
tests/: conftest.py  test_config.py  test_integration.py  test_profile_manager.py  test_save_manager.py  test_settings_controller.py  test_views_profile.py  test_views_save.py  test_views_settings.py
